--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ url:              http://hyde.getpoole.com
 baseurl:          /
 
 author:
-  name:           'Mark Otto'
+  name:           'Katie Esposito'
   url:            https://twitter.com/mdo
 
 paginate:         5
